# aia-language-speech_reconigtion

./: CHANGELOG.md  Dockerfile  README.md  daemon.py  daemon2.py  daemon3.py  pyproject.toml  requirement.txt
aia-language-speech_reconigtion/: daemon.py  speechReconigtion.py
aia_language_speech_reconigtion/: daemon.py  speechReconigtion.py
kafka/: Queue.py  README.md  consumer.py  producer.py
resources/: memory.csv
resources/test/audio_sampling/: encender_bomba.flac  enciende_luz_invernadero.flac  leer_yahoo.flac  test.flac  wh40k_predator.flac  wh40k_rhino.flac  wh40k_sm.flac  wh40k_vyper.flac
svc/: NLClassifier.py  NLUmaincmd.py
test/: id3.py  sklearnSimpleMemory.py
tests/: test_audio2text.py  test_bkg.py  test_sendmsg.py  test_write_audio.py
