[tool.poetry]
name = "aia-language-speech-reconigtion"
version = "0.1.1"
description = ""
authors = ["Edgar Rodrigo Sanchez De Gracia <edgr.sanchez@mercadolibre.cl>"]
readme = "README.md"
packages = [{include = "aia-language-speech_reconigtion"}]

[tool.poetry.dependencies]
python = "^3.8.5"
colorama = "^0.4.5"
SpeechRecognition = "3.8.1"
confluent-kafka = "1.9.2"
scikit-learn = "1.1.2"
pandas = "1.5.0"
PyAudio = "0.2.12"
pymongo = "4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
daemon = 'aia-language-speech_reconigtion.daemon:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
